force-app/main/default/objects/HRCSVC21_Parts_Order_Integration_Details__mdt/HRCSVC21_Parts_Order_Integration_Details__mdt.object-meta.xml
<CustomObject>
    <description>SE-2784:As an agent creating a parts order from desktop, I need the ability to enter a ship-to and see the sold-to returned from JDE. I need to be able to override the sold-to location as well as enter a ship-to address override</description>
    <label>Parts Order Integration Detail</label>
    <pluralLabel>Parts Order Integration Details</pluralLabel>
</CustomObject>