force-app/main/default/objects/HRCSVC21_Parts_Order_Integration_Details__mdt/fields/HRCSVC21_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_Client_Secret__c</fullName>
    <description>SE-2784/2780/2465 - Used for integration between JDE and Salesforce</description>
    <label>Client Secret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>