force-app/main/default/objects/HRCSVC21_Parts_Order_Integration_Details__mdt/fields/HRCSVC21_Content_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_Content_Type__c</fullName>
    <description>SE-2784</description>
    <label>Content-Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>