force-app/main/default/objects/HRCSVC21_Parts_Order_Integration_Details__mdt/fields/HRCSVC21_Timeout__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_Timeout__c</fullName>
    <description>SE-2784</description>
    <label>Timeout</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>